WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105352
String improvements in geolocation and notifications modules
https://bugs.webkit.org/show_bug.cgi?id=105352
Summary
String improvements in geolocation and notifications modules
Joseph Pecoraro
Reported
2012-12-18 14:42:39 PST
While reading through the code for Modules/geolocation and Modules/notifications I noticed some string improvements that could be made. Patch to follow.
Attachments
[PATCH] Proposed Fix
(7.74 KB, patch)
2012-12-18 14:46 PST
,
Joseph Pecoraro
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2012-12-18 14:46:18 PST
Created
attachment 180032
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 2
2012-12-19 10:36:46 PST
Comment on
attachment 180032
[details]
[PATCH] Proposed Fix Given a recent patch with similar changes caused crashes I didn't see I'm going to r- and hold off on this until I can test it further.
Joseph Pecoraro
Comment 3
2013-01-04 12:48:58 PST
Comment on
attachment 180032
[details]
[PATCH] Proposed Fix Back to r? the earlier concerns do not matter here.
Joseph Pecoraro
Comment 4
2013-01-07 15:59:23 PST
Landed
r139005
: <
http://trac.webkit.org/changeset/139005
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug