String improvements in geolocation and notifications modules https://bugs.webkit.org/show_bug.cgi?id=105352

Reviewed by Sam Weinig.

* Modules/geolocation/Geolocation.cpp:
(WebCore::Geolocation::GeoNotifier::timerFired):
(WebCore::Geolocation::startRequest):
(WebCore::Geolocation::requestUsesCachedPosition):
(WebCore::Geolocation::makeCachedPositionCallbacks):
(WebCore::Geolocation::setIsAllowed):
(WebCore::Geolocation::cancelRequests):
(WebCore::Geolocation::handlePendingPermissionNotifiers):
* Modules/geolocation/GeolocationController.cpp:
(WebCore::GeolocationController::positionChanged):
* Modules/notifications/WorkerContextNotifications.cpp:
Use ASCIILiteral for constant strings becoming WTFStrings.

(WebCore::WorkerContextNotifications::from):
Use AtomicString::ConstructFromLiteral for the static local.

Canonical link: https://commits.webkit.org/124465@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139005 268f45cc-cd09-0410-ab3c-d52691b4dbfc